--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <section class="container clearfix">
             <!-- Col Left -->
             <div class="col-left float-left">
-                <div class="img-box">
+                <div class="img-box img-title">
                     <img src="img/profile.svg" alt="Profile">
                 </div>
                 <div class="title-and-specification">
@@ -80,8 +80,9 @@
             </div>
             <!-- End Col Left -->
 
+            <!-- End Col Center -->
             <div class="col-center float-left">
-                <div class="img-box">
+                <div class="img-box img-title">
                     <img src="img/computer.svg" alt="Computer">
                 </div>
                 <div class="title-and-specification">
@@ -90,9 +91,12 @@
                     <p class="grey-text">Scopri il syllabus, la guida per il tuo percorso. Scegli gli argomenti per passare al livello successivo e affrontarli con i tutor nelle sessioni one-to-one</p>                   
                 </div> 
             </div>
+            <!-- End Col Center -->
+
+            <!-- Col Right -->
             <div class="col-right float-left">
-                <div class="img-box">
-                    <img src="img/doc.svg" alt="Computer">
+                <div class="img-box img-title">
+                    <img src="img/doc.svg" alt="Document">
                 </div>
                 <div class="title-and-specification">
                     <h2 class="green-text">Monitora i tuoi progressi costantemente</h2> 
@@ -100,9 +104,29 @@
                     <p class="grey-text">Controlla i tuoi progressi con i dati elaborati dal nostro sistema. Hai il pieno controllo su miglioramenti e obiettivi raggiunti</p>                   
                 </div>
             </div>
+            <!-- End Col Right -->
+
         </section>
         <!-- End Content Top / 3 Col Float left -->
-        <section class="container"></section>
+
+        <hr>
+
+        <!-- Content bottom / 2 Col Float left -->
+        <section class="container clearfix">
+           <div class="content-left float-left">
+                <div class="img-box img-graphic">
+                    <img src="img/mountain.svg" alt="Mountain">
+                </div>
+           </div>
+           <div class="content-right float-left">
+               <div class="content-text">
+                    <h2>Scopri il tuo livello iniziale e struttura un piano personalizzato</h2>
+                    <p class="grey-text">l'esperienza Fluentify parte sempre da un test di placement per avere una chiara visione del tuo inglese, ad oggi.</p>
+                    <a href="#">Scopri il nostro test di placement</a>
+               </div>             
+           </div>
+        </section>
+        <!-- End Content bottom / 2 Col Float left -->
     </main>
     <!-- END MAIN -->
     
