--- a/index.html
+++ b/index.html
@@ -129,6 +129,19 @@
         <!-- End Content bottom / 2 Col Float left -->
     </main>
     <!-- END MAIN -->
+
+    <!-- FOOTER -->
+    <footer>
+        <div class="container clearfix">
+            <div class="footer-left float-left">
+                <h2>Struttura un piano</h2>
+            </div>
+            <div class="footer-right float-left">
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- END FOOTER -->
     
 </body>
 </html>
