--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- HELP BUTTON -->
+    <a class="help button" href="#">Help</a>
+    <!-- END HELP BUTTON -->
     <!-- HEADER -->
     <header>
        <div class="container">
@@ -137,6 +140,13 @@
                 <h2>Struttura un piano</h2>
             </div>
             <div class="footer-right float-left">
+                <div class="footer-select">
+                    <label for="sex">Sono</label>
+                    <select id="sex-type" name="sex-type">
+                      <option value="Man">Man</option>
+                      <option value="Woman">Woman</option>
+                    </select>
+                    <a class="button" href="#">visualizza il tuo piano</a>
                 </div>
             </div>
         </div>
