--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <div class="logo float-left">
                 <img src="img/logo.svg" alt="Logo">
             </div>
+            <!-- Menu center -->
             <div class="menu-center float-left">
                 <ul class="menu">
                     <li>
@@ -37,6 +38,9 @@
                     </li>
                 </ul>
             </div>
+            <!-- End Menu Center -->
+
+            <!-- Menu Right -->
             <div class="menu-right float-left">
                 <ul class="menu">
                     <li>
@@ -50,6 +54,7 @@
                     </li>
                 </ul>
             </div>
+            <!-- End Menu Right -->
         </nav>
         <div class="header-title">
             <h1>Scegli l'inglese studiato per i professionisti</h1>
