--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </div>
             <div class="footer-right float-left">
                 <div class="footer-select">
-                    <label for="sex">Sono</label>
+                    <label for="identity">Sono</label>
                     <select id="sex-type" name="sex-type">
                       <option value="Man">Man</option>
                       <option value="Woman">Woman</option>
