--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <!-- END HELP BUTTON -->
     <!-- HEADER -->
     <header>
-       <div class="container">
-        <nav class="clearfix">
+       <div class="container clearfix">
+        <nav>
             <div class="logo float-left">
                 <img src="img/logo.svg" alt="Logo">
             </div>
@@ -58,7 +58,7 @@
         </nav>
         <div class="header-title">
             <h1>Scegli l'inglese studiato per i professionisti</h1>
-            <div class="button">struttura un piano</div>
+            <a class="button" href="#">struttura un piano</a>
         </div>
        </div>
     </header>
@@ -146,7 +146,7 @@
             </div>
             <div class="footer-right float-left">
                 <div class="footer-select">
-                    <label for="identity">Sono</label>
+                    <label id="identity" for="identity">Sono</label>
                     <select id="sex-type" name="sex-type">
                       <option value="Man">Man</option>
                       <option value="Woman">Woman</option>
