--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <!-- END HELP BUTTON -->
     <!-- HEADER -->
     <header>
-       <div class="container clearfix">
-        <nav>
+       <div class="container">
+        <nav class="clearfix">
             <div class="logo float-left">
                 <img src="img/logo.svg" alt="Logo">
             </div>
