--- a/index.html
+++ b/index.html
@@ -74,46 +74,47 @@
         <!-- End Tilte and bg grey -->
 
         <!-- Content Top / 3 Col Float left -->
-        <section class="container clearfix">
+        <section class="container">
             <!-- Col Left -->
-            <div class="col-left float-left">
-                <div class="img-box img-title">
-                    <img src="img/profile.svg" alt="Profile">
+            <div class="clearfix">
+                <div class="col-left float-left">
+                    <div class="img-box img-title">
+                        <img src="img/profile.svg" alt="Profile">
+                    </div>
+                    <div class="title-and-specification">
+                        <h2 class="green-text">Piano formativo configurato sul proprio livello</h2> 
+                        <hr class="short-hr">
+                        <p class="grey-text">Un metodo improntato sullo speaking con percorsi basati esattamente sulle esigenze personali dei partecipanti. Tutto parte da un accurato test di partenza per definire il livello e impostare gli obiettivi da raggiungere</p>                   
+                    </div>                                
                 </div>
-                <div class="title-and-specification">
-                    <h2 class="green-text">Piano formativo configurato sul proprio livello</h2> 
-                    <hr class="short-hr">
-                    <p class="grey-text">Un metodo improntato sullo speaking con percorsi basati esattamente sulle esigenze personali dei partecipanti. Tutto parte da un accurato test di partenza per definire il livello e impostare gli obiettivi da raggiungere</p>                   
-                </div>                                
-            </div>
-            <!-- End Col Left -->
+                <!-- End Col Left -->
+    
+                <!-- End Col Center -->
+                <div class="col-center float-left">
+                    <div class="img-box img-title">
+                        <img src="img/computer.svg" alt="Computer">
+                    </div>
+                    <div class="title-and-specification">
+                        <h2 class="green-text">Affiancamento costante del tutor</h2> 
+                        <hr class="short-hr">
+                        <p class="grey-text">Scopri il syllabus, la guida per il tuo percorso. Scegli gli argomenti per passare al livello successivo e affrontarli con i tutor nelle sessioni one-to-one</p>                   
+                    </div> 
+                </div>
+                 <!-- End Col Center -->
 
-            <!-- End Col Center -->
-            <div class="col-center float-left">
-                <div class="img-box img-title">
-                    <img src="img/computer.svg" alt="Computer">
+                <!-- Col Right -->
+                <div class="col-right float-left">
+                    <div class="img-box img-title">
+                        <img src="img/doc.svg" alt="Document">
+                    </div>
+                    <div class="title-and-specification">
+                        <h2 class="green-text">Monitora i tuoi progressi costantemente</h2> 
+                        <hr class="short-hr">
+                        <p class="grey-text">Controlla i tuoi progressi con i dati elaborati dal nostro sistema. Hai il pieno controllo su miglioramenti e obiettivi raggiunti</p>                   
+                    </div>
                 </div>
-                <div class="title-and-specification">
-                    <h2 class="green-text">Affiancamento costante del tutor</h2> 
-                    <hr class="short-hr">
-                    <p class="grey-text">Scopri il syllabus, la guida per il tuo percorso. Scegli gli argomenti per passare al livello successivo e affrontarli con i tutor nelle sessioni one-to-one</p>                   
-                </div> 
+                <!-- End Col Right -->
             </div>
-            <!-- End Col Center -->
-
-            <!-- Col Right -->
-            <div class="col-right float-left">
-                <div class="img-box img-title">
-                    <img src="img/doc.svg" alt="Document">
-                </div>
-                <div class="title-and-specification">
-                    <h2 class="green-text">Monitora i tuoi progressi costantemente</h2> 
-                    <hr class="short-hr">
-                    <p class="grey-text">Controlla i tuoi progressi con i dati elaborati dal nostro sistema. Hai il pieno controllo su miglioramenti e obiettivi raggiunti</p>                   
-                </div>
-            </div>
-            <!-- End Col Right -->
-
         </section>
         <!-- End Content Top / 3 Col Float left -->
 
@@ -140,18 +141,20 @@
 
     <!-- FOOTER -->
     <footer>
-        <div class="container clearfix">
-            <div class="footer-left float-left">
-                <h2>Struttura un piano</h2>
-            </div>
-            <div class="footer-right float-left">
-                <div class="footer-select">
-                    <label id="identity" for="identity">Sono</label>
-                    <select id="sex-type" name="sex-type">
-                      <option value="Man">Man</option>
-                      <option value="Woman">Woman</option>
-                    </select>
-                    <a class="button" href="#">visualizza il tuo piano</a>
+        <div class="container">
+            <div class="clearfix">
+                <div class="footer-left float-left">
+                    <h2>Struttura un piano</h2>
+                </div>
+                <div class="footer-right float-left">
+                    <div class="footer-select">
+                        <label id="identity" for="identity">Sono</label>
+                        <select id="sex-type" name="sex-type">
+                          <option value="Man">Man</option>
+                          <option value="Woman">Woman</option>
+                        </select>
+                        <a class="button" href="#">visualizza il tuo piano</a>
+                    </div>
                 </div>
             </div>
         </div>
